<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#CFD8DC"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:weightSum="120">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20"
        android:background="#CFD8DC">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom|right"
            android:layout_weight="0.6"
            android:gravity="right"
            android:maxLength="10"
            android:textColor="#000000"
            android:textColorHighlight="#303F9F"
            android:background="#CFD8DC"
            android:textSize="14pt"/>


    </TableRow>

    <!--     Row 2 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#607D8B"
        android:layout_weight="20">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/operators_background"
            android:text="@string/buttonClear"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/buttonModulus"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/operators_background"
            android:text="@string/buttonModulus"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/operators_background"
            android:text="@string/buttonDivision"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:typeface="monospace" />


        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_span="1"
            android:background="@drawable/operators_background"
            android:text="@string/buttonDelete"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:typeface="monospace" />

    </TableRow>


    <!--     Row 3 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20"
        >

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button7"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button8"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button9"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />


        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_span="1"
            android:background="@drawable/operators_background"
            android:text="@string/buttonAddition"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:typeface="monospace" />

    </TableRow>


    <!--     Row 4 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button4"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button5"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button6"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />


        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_span="1"
            android:background="@drawable/operators_background"
            android:text="@string/buttonSubtraction"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:typeface="monospace" />


    </TableRow>


    <!--     Row 5 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">


        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button1"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button2"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button3"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_span="1"
            android:background="@drawable/operators_background"
            android:text="@string/buttonMultiplication"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:typeface="monospace" />


    </TableRow>


    <!--     Row 6 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">


        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/buttonDot"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/button0"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/buttonSign"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_span="1"
            android:background="@drawable/button_background"
            android:text="@string/buttonSign"
            android:textColor="#000000"
            android:textSize="35dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_span="1"
            android:background="@drawable/equals_background"
            android:text="@string/buttonEqual"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:typeface="monospace" />


    </TableRow>



</TableLayout>
